name:                docx-hyperlink
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bjornbm/docx-hyperlink#readme
license:             BSD3
license-file:        LICENSE
author:              Bjorn Buckwalter
maintainer:          bjorn@buckwalter.se
copyright:           Copyright: (c) 2016 Bjorn Buckwalter
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable docx-hyperlink-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , docx-hyperlink
                     , hxt
                     , path
                     , path-io
                     , zip
  default-language:    Haskell2010

test-suite docx-hyperlink-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , docx-hyperlink
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bjornbm/docx-hyperlink
